Exevopan repository and DI

--- a/src/ExevopanNotification.ApplicationCore/ExevopanNotification.ApplicationCore.csproj
+++ b/src/ExevopanNotification.ApplicationCore/ExevopanNotification.ApplicationCore.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="6.0.5" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ExevopanNotification.Domain\ExevopanNotification.Domain.csproj" />
   </ItemGroup>
 
 </Project>
