Get exevopan data and filter

--- a/src/ExevopanNotification.Domain/ExevopanNotification.Domain.csproj
+++ b/src/ExevopanNotification.Domain/ExevopanNotification.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Text.Json" Version="6.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ExevopanNotification.Utils\ExevopanNotification.Utils.csproj" />
+  </ItemGroup>
+
 </Project>
