Appsettings base config

--- a/src/ExevopanNotification.Api/appsettings.Development.json
+++ b/src/ExevopanNotification.Api/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "TelegramConfig": {
+    "Key": "<Your key>",
+    "GroupId": "-857258762"
+  },
+  "QueryConfig": {
+    "minutesToGo": 30,
+    "maximumBid": 750
   }
 }
