--- a/src/ExevopanNotification.ApplicationCore/ExevopanNotification.ApplicationCore.csproj
+++ b/src/ExevopanNotification.ApplicationCore/ExevopanNotification.ApplicationCore.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="Telegram.Bot" Version="18.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ExevopanNotification.Domain\ExevopanNotification.Domain.csproj" />
   </ItemGroup>
 
