--- a/src/ExevopanNotification.Domain/ExevopanNotification.Domain.csproj
+++ b/src/ExevopanNotification.Domain/ExevopanNotification.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="6.0.5" />
+    <PackageReference Include="Telegram.Bot" Version="18.0.0" />
   </ItemGroup>
 
   <ItemGroup>
