--- a/src/ExevopanNotification.Domain/ExevopanNotification.Domain.csproj
+++ b/src/ExevopanNotification.Domain/ExevopanNotification.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ExevopanNotification.Utils\ExevopanNotification.Utils.csproj" />
+    <ProjectReference Include="..\ExevopanNotification.Utils\ExevopanNotification.Utils.csproj" />
   </ItemGroup>
 
 </Project>
