--- a/src/ExevopanNotification.Api/ExevopanNotification.Api.csproj
+++ b/src/ExevopanNotification.Api/ExevopanNotification.Api.csproj
@@ -19,6 +19,7 @@
 	<PropertyGroup>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>1701;1702;1591;S101</NoWarn>
+		<DockerfileContext>..\..</DockerfileContext>
 	</PropertyGroup>
 
 </Project>
