--- a/src/ExevopanNotification.Api/appsettings.json
+++ b/src/ExevopanNotification.Api/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TelegramConfig": {
+    "Key": "",
+    "GroupId": "-857258762"
+  },
+  "QueryConfig": {
+    "minutesToGo": 30,
+    "maximumBid": 750
+  }
 }
