Changed appsettings and removed config write

--- a/src/ExevopanNotification.Api/appsettings.json
+++ b/src/ExevopanNotification.Api/appsettings.json
@@ -11,7 +11,7 @@
     "GroupId": "-857258762"
   },
   "QueryConfig": {
-    "minutesToGo": 30,
-    "maximumBid": 750
+    "MinutesToGo": 30,
+    "MaximumBid": 750
   }
 }
