--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,9 @@ on:
   # Triggers the workflow every 5 minutes
   schedule:
     - cron: "*/5 * * * *"
-
+    
+  workflow_dispatch:
+  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "cron"
