--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,12 @@
-name: Exevopan Notification - Cron
-
- # Controls when the workflow will run
-on:
-  # Triggers the workflow every 5 minutes
-  schedule:
-    - cron: "*/25 * * * *"
-    
-  workflow_dispatch:
-  
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name: Fly Deploy
+on: [push]
+env:
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 jobs:
-  # This workflow contains a single job called "cron"
-  cron:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:        
-      - name: Call healthcheck
-        uses: fjogeleit/http-request-action@v1
-        with:
-          url: 'https://exevopan-notirication.onrender.com/hc'
-          method: 'GET'
+  deploy:
+      name: Deploy app
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - uses: superfly/flyctl-actions/setup-flyctl@master
+        - run: flyctl deploy --remote-only
