--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
 name: Fly Deploy
-on: 
-  [push]
+on:
+  push:
+    branches: [master]
+  # pull_request:
+  #   branches: [master]
+
   workflow_dispatch:
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
