Rule breaker feature

--- a/src/ExevopanNotification.Api/appsettings.Development.json
+++ b/src/ExevopanNotification.Api/appsettings.Development.json
@@ -8,7 +8,8 @@
 
   "TelegramConfig": {
     "Key": "",
-    "GroupId": "-857258762"
+    "GroupId": "-857258762",
+    "RuleBreakerGroupId": "-4177812712"
   },
   "QueryConfig": {
     "MinutesToGo": 30,
