--- a/src/ExevopanNotification.Api/appsettings.json
+++ b/src/ExevopanNotification.Api/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "TelegramConfig": {
     "Key": "",
-    "GroupId": "-857258762"
+    "GroupId": "-857258762",
+    "RuleBreakerGroupId": "-4177812712"
   },
   "QueryConfig": {
     "MinutesToGo": 30,
