--- a/src/ExevopanNotification.ApplicationCore/ExevopanNotification.ApplicationCore.csproj
+++ b/src/ExevopanNotification.ApplicationCore/ExevopanNotification.ApplicationCore.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Cronos" Version="0.8.4" />
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
